src/test/deca/codegen/valid/Objets/12IncludeExtends.deca
#include "Math.decah"

class pow2 extends Math{
    int two = 2;
    int two2 = 4;
}

{
    pow2 m = new pow2();
    println(m.two);
    println(m.PI);
}
