src/test/deca/codegen/invalid/Objets/05asinError.deca
#include "Math.decah"
{
    Math m = new Math();
    m.asin(5);
}
